--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,7 @@ section {
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-width: 1280px;
   min-height: max-content;
 }
 
