--- a/app/bucket/page.css
+++ b/app/bucket/page.css
@@ -1,6 +1,20 @@
-.row {
+.cell {
   height: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+p {
+  overflow-y: scroll;
+  text-overflow: ellipsis;
+  max-width: 600px;
 }
