--- a/app/sections/section1/section1.css
+++ b/app/sections/section1/section1.css
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 15px;
 }
 
 .swiper-slide img {
@@ -20,11 +21,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .swiper {
   width: 100%;
-  height: 300px;
+  height: 500px;
   margin: 20px 20px;
 }
 .append-buttons {
